--- a/en/theme/material/templates/home-page.html
+++ b/en/theme/material/templates/home-page.html
@@ -45,7 +45,7 @@
     <div style="display: flex; flex-direction: row; gap: 24px; align-items: center;">
       <button class="md-typeset md-button md-button--primary md-button--small md-button--flex md-button--apim"
         onclick="window.open('http://localhost:4000/en/4.6.0/ai-gateway/ai-gateway-overview/', '_blank', 'noopener')">
-        Get started with AI Gateway
+        Get Started with AI Gateway
       </button>
       <a href="#components">Browse by Components</a>
     </div>
@@ -175,7 +175,8 @@
               </div>
               <div class="components-card-footer">
 
-                <a href="{{base_path}}/api-design-manage/design/design-api-overview/" class="components-resource-link">
+                <a href="{{base_path}}/api-design-manage/design/design-api-overview/" target="_blank" rel="noopener"
+                  class="components-resource-link">
                   Design APIs Overview <span>&rarr;</span>
                 </a>
               </div>
@@ -197,7 +198,8 @@
               </div>
               <div class="components-card-footer">
 
-                <a href="{{base_path}}/api-developer-portal/consume-api-overview/" class="components-resource-link">
+                <a href="{{base_path}}/api-developer-portal/consume-api-overview/" target="_blank" rel="noopener"
+                  class="components-resource-link">
                   Consume APIs Overview <span>&rarr;</span>
                 </a>
               </div>
@@ -221,11 +223,13 @@
             </div>
             <div class="components-card-footer">
 
-              <a href="{{base_path}}/api-gateway/overview-of-the-api-gateway/" class="components-resource-link">
+              <a href="{{base_path}}/api-gateway/overview-of-the-api-gateway/" target="_blank" rel="noopener"
+                class="components-resource-link">
                 Universay Gateway Overview <span>&rarr;</span>
               </a>
 
-              <a href="{{base_path}}/api-gateway/federated-gateways/overview/" class="components-resource-link">
+              <a href="{{base_path}}/api-gateway/federated-gateways/overview/" target="_blank" rel="noopener"
+                class="components-resource-link">
                 Federated Gateways Overview <span>&rarr;</span>
               </a>
 
@@ -242,7 +246,8 @@
             </div>
             <div class="components-card-footer">
 
-              <a href="{{base_path}}/ai-gateway/ai-gateway-overview//" class="components-resource-link">
+              <a href="{{base_path}}/ai-gateway/ai-gateway-overview//" target="_blank" rel="noopener"
+                class="components-resource-link">
                 AI Gateway Overview <span>&rarr;</span>
               </a>
 
@@ -265,12 +270,14 @@
             </div>
             <div class="components-card-footer">
 
-              <a href="{{base_path}}/monitoring/api-analytics/analytics-overview/" class="components-resource-link">
-                API Analytics Overview <span>&rarr;</span>
+              <a href="{{base_path}}/monitoring/api-analytics/analytics-overview/" target="_blank" rel="noopener"
+                class="components-resource-link">
+                Analytics Overview <span>&rarr;</span>
               </a>
 
-              <a href="{{base_path}}/monitoring/api-monetization/monetizing-an-api/" class="components-resource-link">
-                API Monetization How-to Guide <span>&rarr;</span>
+              <a href="{{base_path}}/monitoring/api-monetization/monetizing-an-api/" target="_blank" rel="noopener"
+                class="components-resource-link">
+                Monetization How-to Guide <span>&rarr;</span>
               </a>
 
             </div>
@@ -285,7 +292,8 @@
             </div>
             <div class="components-card-footer">
 
-              <a href="{{base_path}}/key-manager/key-manager-overview/" class="components-resource-link">
+              <a href="{{base_path}}/key-manager/key-manager-overview/" target="_blank" rel="noopener"
+                class="components-resource-link">
                 Key Manager Overview <span>&rarr;</span>
               </a>
 
@@ -303,7 +311,7 @@
             <div class="components-card-footer">
 
               <a href="{{base_path}}/install-and-setup/setup/api-controller/getting-started-with-wso2-api-controller/"
-                class="components-resource-link">
+                target="_blank" rel="noopener" class="components-resource-link">
                 API Controller Quickstart <span>&rarr;</span>
               </a>
 
@@ -327,10 +335,12 @@
             </div>
             <div class="components-card-footer">
 
-              <a href="{{base_path}}/administer/admin-overview/" class="components-resource-link">
+              <a href="{{base_path}}/administer/admin-overview/" target="_blank" rel="noopener"
+                class="components-resource-link">
                 Administration Overview <span>&rarr;</span>
               </a>
-              <a href="{{base_path}}/administer/governance/overview/" class="components-resource-link">
+              <a href="{{base_path}}/administer/governance/overview/" target="_blank" rel="noopener"
+                class="components-resource-link">
                 Governance Overview <span>&rarr;</span>
               </a>
 
