fix minor issues in home page.

--- a/en/theme/material/templates/home-page.html
+++ b/en/theme/material/templates/home-page.html
@@ -79,8 +79,7 @@
               </div>
               <h3>API Design</h3>
               <div class="components-card-content">
-                <p>The complete toolkit for API Creators. Design, document, mock, and apply policies for your REST,
-                  GraphQL, and AsyncAPI specifications.</p>
+                Toolkit to design, document, and mock REST, GraphQL, and AsyncAPI specifications. Create AI APIs and use the AI-powered Design Assistant to generate APIs from natural language.
               </div>
             </div>
             <div class="components-card-footer">
@@ -96,7 +95,7 @@
         <div>
           <div class="components-section-header">
             <h2>Discover APIs</h2>
-            <p>Find, explore, and subscribe to APIs for your applications</p>
+            <p>Explore and subscribe to APIs and MCP Servers for your applications.</p>
           </div>
           <div class="components-card">
             <div>
@@ -105,7 +104,7 @@
               </div>
               <h3>API Developer Portal</h3>
               <div class="components-card-content">
-                The hub for Application Developers. Discover a catalog of available APIs, subscribe your applications,
+                The hub for Application Developers. Discover a catalog of available APIs and MCP Servers, subscribe your applications,
                 and manage your API keys and credentials.
               </div>
             </div>
@@ -159,8 +158,7 @@
             </div>
             <h3>AI Gateway</h3>
             <div class="components-card-content">
-              A specialized gateway to secure, monitor, and manage access to LLMs. Get started with the MCP server and
-              AI-specific policies.
+              Enterprise-grade gateway for AI workloads. Secure, monitor, and control access to LLMs and AI services with cost controls, multi-provider routing, observability, and policy enforcement. Transform APIs into AI-callable tools and manage AI interactions with centralized governance.
             </div>
           </div>
           <div class="components-card-footer">
@@ -196,7 +194,7 @@
               target="_blank" rel="noopener" class="components-resource-link">
               Authentication Overview <span>&rarr;</span>
             </a>
-            <a href="{{base_path}}/en/4.6.0/api-security/runtime/authorization/api-authorization//" target="_blank"
+            <a href="{{base_path}}/en/4.6.0/api-security/runtime/authorization/api-authorization/" target="_blank"
               rel="noopener" class="components-resource-link">
               Authorization Overview <span>&rarr;</span>
             </a>
@@ -235,7 +233,7 @@
         <div class="components-card">
           <div>
             <div class="md-column-grid-item-header-icon icon-color-4">
-              {{ home_card_icon("octicons/terminal-16") }}
+              {{ home_card_icon("octicons/workflow-16") }}
             </div>
             <h3>APIOps</h3>
             <div class="components-card-content">
@@ -260,7 +258,7 @@
       </div>
 
       <div class="components-section-header">
-        <h2>Administer</h2>
+        <h2>Administration</h2>
         <p>Configure and manage the core system, tenants, and other entities.</p>
       </div>
 
