reorder getting started. fix broken links. update home page tagline.

--- a/en/theme/material/templates/home-page.html
+++ b/en/theme/material/templates/home-page.html
@@ -95,7 +95,7 @@
         <div>
           <div class="components-section-header">
             <h2>Discover APIs</h2>
-            <p>Explore and subscribe to APIs and MCP Servers for your applications.</p>
+            <p>Explore and subscribe to APIs and MCP Servers.</p>
           </div>
           <div class="components-card">
             <div>
